<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:paddingStart="16dp"
         android:paddingTop="12dp"
         android:paddingEnd="16dp"
         android:paddingBottom="14dp">

        <ir.hanzodev1375.components.glass.ButtonCompat
             android:id="@+id/btnAddRemote"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:text="@string/remote_add" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
         android:layout_height="wrap_content"
         android:layout_width="match_parent" />

    <FrameLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent">

        <androidx.recyclerview.widget.RecyclerView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:clipToPadding="false"
             android:paddingBottom="12dp"
             android:scrollbars="vertical"
             android:id="@+id/recyclerViewRemotes" />

        <ir.hanzodev1375.components.views.EmptyView
             android:id="@+id/emptyView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:emptyIcon="@drawable/ic_empty_state"
             app:emptyTitle="@string/git_empty_remotes_title"
             app:emptyDescription="@string/git_empty_remotes_desc" />

    </FrameLayout>

</LinearLayout>
